--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -1,7 +1,7 @@
 <header class="site-masthead slds-grid slds-page-header slds-theme--inverse">
-  <div class="slds-media slds-media--center slds-media--responsive">
-    <span class="slds-media__figure slds-avatar--medium">
-      <img src="/vendor/SLDS092/assets/images/header-components.svg" alt="">
+  <div class="slds-media slds-media--center">
+    <span class="slds-media__figure">
+      <img src="/vendor/SLDS092/assets/images/header-components.svg" alt="" style="width: 48px;height: 54px;">
     </span>
   </div>
   <div class="slds-media__body slds-p-top--x-small">
